--- a/mvc/pom.xml
+++ b/mvc/pom.xml
@@ -125,6 +125,13 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>4.3.14.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.14.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>czy</groupId>
